tests/NormalTests/paczka1/fuzzy1/53512845.err
Error in line 1: CHsL S300 76,6
Error in line 2: IEsjrSyz S173 47,3
Error in line 4: IEsjrSyz S185 53,6
Error in line 25: u0BRdxodg S300 74,5
Error in line 32: BN4Q5Rhz S185 60,26
